--- a/seata-at/order-service/src/main/resources/application.properties
+++ b/seata-at/order-service/src/main/resources/application.properties
@@ -20,7 +20,8 @@ seata.application-id=${spring.application.name}-seata
 seata.enabled=true
 seata.enable-auto-data-source-proxy=true
 seata.tx-service-group=order_service_group
-seata.service.vgroup-mapping.order_service_group=default
+# 如果seata使用了nacos配置中心，并且nacos配置了vgroup-mapping，这里不用配置即可
+#seata.service.vgroup-mapping.order_service_group=default
 # Seata Registry Center For Nacos
 seata.registry.type=nacos
 seata.registry.nacos.application=seata-server
@@ -34,6 +35,7 @@ seata.config.type=nacos
 seata.config.nacos.username=nacos
 seata.config.nacos.password=nacos
 seata.config.nacos.group=SEATA_GROUP
+seata.config.nacos.server-addr=localhost:8848
 
 
 ### Mybatis-Plus
