--- a/seata-at/product-service/src/main/resources/application.properties
+++ b/seata-at/product-service/src/main/resources/application.properties
@@ -20,6 +20,7 @@ seata.application-id=${spring.application.name}-seata
 seata.enabled=true
 seata.enable-auto-data-source-proxy=true
 seata.tx-service-group=product_service_group
+# seata没有使用额外的配置中心的话，这里必须要配置vgroup-mapping
 seata.service.vgroup-mapping.product_service_group=default
 # Seata Registry Center For Nacos
 seata.registry.type=nacos
