--- a/seata-xa/xa-order-service/src/main/resources/application.yml
+++ b/seata-xa/xa-order-service/src/main/resources/application.yml
@@ -53,6 +53,7 @@ seata:
   application-id: ${spring.application.name}
   # seata 服务分组，要与服务端配置service.vgroup_mapping的后缀对应
   tx-service-group: order_service_group
+  # seata没有使用额外的配置中心的话，这里必须要配置vgroup-mapping
   service:
     vgroup-mapping:
       order_service_group: default
