--- a/seata-at/account-service/src/main/resources/application.properties
+++ b/seata-at/account-service/src/main/resources/application.properties
@@ -27,7 +27,7 @@ seata.registry.type=nacos
 seata.registry.nacos.application=seata-server
 seata.registry.nacos.namespace=public
 seata.registry.nacos.server-addr=localhost:8848
-seata.registry.nacos.group=SEATA_GROUP
+seata.registry.nacos.group=DEFAULT_GROUP
 seata.registry.nacos.username=nacos
 seata.registry.nacos.password=nacos
 
