--- a/seata-at/order-service/pom.xml
+++ b/seata-at/order-service/pom.xml
@@ -78,6 +78,12 @@
             <artifactId>springfox-swagger2</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.27</version>
+        </dependency>
+
     </dependencies>
 
 </project>
